Add Navigation bar
Concerne #000000

--- a/typescript/src/styles/variables.scss
+++ b/typescript/src/styles/variables.scss
@@ -1,1 +1,11 @@
-$color-background-header: #095985;
+$background-color: #ffffff;
+$background-color-header: #095985;
+
+$tab-background-color-active: $background-color;
+$tab-background-text-color-active: #000000;
+
+$tab-background-color-inactive: #b4d7ee;
+$tab-background-text-color-inactive: #1d5273;
+
+$tab-background-color-inactive-hover: #0073b3;
+$tab-background-text-color-inactive-hover: #ffffff;
