Add component linkCard and InfoCard for the futur feature
Concerne #000000

--- a/typescript/src/styles/variables.scss
+++ b/typescript/src/styles/variables.scss
@@ -9,3 +9,8 @@ $tab-background-text-color-inactive: #1d5273;
 
 $tab-background-color-inactive-hover: #0073b3;
 $tab-background-text-color-inactive-hover: #ffffff;
+
+$border-color: #d0d0d0;
+
+$background-color-modal: #f9fcfd;
+$color-text-modal: #ffffff;
