--- a/typescript/src/styles/variables.scss
+++ b/typescript/src/styles/variables.scss
@@ -1,16 +1,32 @@
+/****** Global global color *****/
+$text-color: #333;
+$text-color-alert: #d00;
+
 $background-color: #ffffff;
 $background-color-header: #095985;
 
-$tab-background-color-active: $background-color;
-$tab-background-text-color-active: #000000;
+/****** tab global color *****/
+$background-tab-color-active: $background-color;
+$background-tab-text-color-active: #000000;
 
-$tab-background-color-inactive: #b4d7ee;
-$tab-background-text-color-inactive: #1d5273;
+$background-tab-color-inactive: #b4d7ee;
+$background-tab-text-color-inactive: #1d5273;
 
-$tab-background-color-inactive-hover: #0073b3;
-$tab-background-text-color-inactive-hover: #ffffff;
+$background-tab-color-inactive-hover: #0073b3;
+$background-tab-text-color-inactive-hover: #ffffff;
 
+/****** Table Modal color *****/
+$background-modal-color: #f9fcfd;
+$text-color-modal: #ffffff;
+
+/****** Table global color *****/
+$background-table-head-color: #f4f4f4;
+
+/****** Border global color *****/
 $border-color: #d0d0d0;
 
-$background-color-modal: #f9fcfd;
-$color-text-modal: #ffffff;
+/****** Button global color *****/
+$background-button-color-hover: #f0f0f0;
+
+/****** Button global color *****/
+$box-shadow-color: rgba(0, 0, 0, 0.1)
