--- a/assets/src/main.css
+++ b/assets/src/main.css
@@ -62,4 +62,9 @@
     .alert {
         color: var(--color-alert);
     }
+
+    .standardBackground {
+        background-color: var(--color-primary-700);
+        color: var(--color-secondary-50);
+    }
 }
