--- a/assets/src/components/molecules/Tab.module.scss
+++ b/assets/src/components/molecules/Tab.module.scss
@@ -3,8 +3,8 @@
     color: var(--color-secondary-50);
 
     &:hover {
-        background-color: var(--color-primary-500);
-        color: var(--color-secondary-50);
+        background-color: var(--color-secondary-50);
+        color: var(--color-primary-700);
     }
 }
 
