--- a/assets/src/components/organisms/tables/SortableTable.module.scss
+++ b/assets/src/components/organisms/tables/SortableTable.module.scss
@@ -15,3 +15,13 @@
         }
     }
 }
+
+.disabledRow {
+    pointer-events: none;
+    opacity: 0.5;
+
+    td {
+        background-color: var(--color-secondary-300) !important;
+        color: var(--color-secondary-600) !important;
+    }
+}
