--- a/assets/src/main.css
+++ b/assets/src/main.css
@@ -67,4 +67,13 @@
         background-color: var(--color-primary-50);
         color: var(--color-secondary-900);
     }
+
+    .icon-button {
+        cursor: pointer;
+        color: var(--color-primary-700);
+    }
+
+    .icon-button:hover {
+        color: var(--color-primary-800);
+    }
 }
