--- a/assets/src/components/organisms/tables/SortableTable.module.scss
+++ b/assets/src/components/organisms/tables/SortableTable.module.scss
@@ -1,18 +1,16 @@
 .stripedRow {
     td {
         background-color: var(--color-secondary-100);
-        transition: background-color 0.2s ease;
-
-        &:nth-child(odd) {
-            background-color: var(--color-secondary-200);
-        }
+        transition: background-color 0.2s ease, color 0.2s ease;
     }
 
-    &:hover {
-        td {
-            background-color: var(--color-primary-500) !important;
-            color: var(--color-secondary-50) !important;
-        }
+    &:nth-of-type(even) td {
+        background-color: var(--color-secondary-200);
+    }
+
+    &:hover td {
+        background-color: var(--color-primary-500) !important;
+        color: var(--color-secondary-50) !important;
     }
 }
 
@@ -23,5 +21,17 @@
     td {
         background-color: var(--color-secondary-300) !important;
         color: var(--color-secondary-600) !important;
+    }
+}
+
+.selectedRow {
+    td {
+        background-color: var(--color-primary-100) !important;
+        color: var(--color-secondary-900) !important;
+    }
+
+    &:hover td {
+        background-color: var(--color-primary-600) !important;
+        color: var(--color-secondary-50) !important;
     }
 }
